# glm-tts-packaged

./: .gitignore  README.md  README_zh.md  glmtts_inference.py  pyproject.toml  requirements.txt
glm_tts/cosyvoice/cli/: __init__.py  frontend.py
glm_tts/cosyvoice/hifigan_cosy2/: generator.py
glm_tts/cosyvoice/utils/: common.py  executor_grpo.py  file_utils.py  frontend_utils.py  mask.py  scheduler.py  train_utils_grpo.py
glm_tts/flow/: dit.py  flow.py  modules.py
glm_tts/grpo/: Readme.md  data_types.py  grpo_utils.py  prepare_data.py  pretrain_GRPO_single.sh  reward_func.py  reward_server.py  run_laughter.py  run_server.sh  run_sim.py  run_wer.py  train_ds_grpo.py
glm_tts/grpo/config/: deepspeed.json  lm_llama_casual_glm_32k_GRPO_cer.yaml
glm_tts/grpo/data/: 0.jsonl  sample.jsonl  sample.yaml  sample_syn_text.txt
glm_tts/grpo/data/embedding/: jiayan.npy
glm_tts/grpo/data/prompt_speech_feat/: jiayan.npy
glm_tts/grpo/data/prompt_speech_token/: jiayan.npy
glm_tts/grpo/loaders/: loader_lm_rl.py
glm_tts/grpo/loaders/dataloader/: dynamic_batch.py  feature_loader_rl.py  loader4rl.py
glm_tts/grpo/modules/wavlm_ecapa/: ecapa_tdnn.py  s3prl_util.py
glm_tts/llm/: glmtts.py
glm_tts/utils/: audio.py  block_mask_util.py  file_utils.py  glm_g2p.py  hift_util.py  tts_model_util.py  vocos_util.py  yaml_util.py
glm_tts/utils/whisper_models/: configuration_whisper.py  modeling_whisper.py
